--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
 <head>
 	<title>Godinez</title>
+	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 </head>
 <body>
-	<h1>Primeiro server Python</h1>
-	<h3>by Laisson / Emerson</h3>
+	<h1>Primeiro server Python<h3>by Laisson / Emerson</h3></h1>
+	<label>Sites bacanas:</label>
+	<ul>
+		<li>https://github.com/pyeve/eve-demo</li>
+		<li>https://speakerdeck.com/nicola/developing-restful-web-apis-with-python-flask-and-mongodb</li>
+		<li>https://scotch.io/tutorials/build-your-first-python-and-django-application</li>
+	</ul>
 </body>
 </html>
