--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,8 @@
 		
 		<title>Godinez</title>
  		<meta charset="utf-8">
-		<link type="text/css" rel="stylesheet" href="resources/css/app.css" />
+		<link rel="stylesheet" type="text/css" href="webapp/resources/css/app.css" />
+		<link rel="shortcut icon" type="image/png" href="webapp/resources/img/favicon.png"/>
 
 	</head>
 	<body>
@@ -14,7 +15,7 @@
 		  	<div v-html="compiledMarkdown"></div>
 		</div>
 
-		<script charset="utf-8 src="node_modules/vue/dist/vue.js"></script>
+		<script charset="utf-8 src="webapp/node_modules/vue/dist/vue.js"></script>
 
 	</body>
 </html>
