--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,7 +15,7 @@
 		  	<div v-html="compiledMarkdown"></div>
 		</div>
 
-		<script charset="utf-8 src="webapp/node_modules/vue/dist/vue.js"></script>
+		<script charset="utf-8" src="webapp/node_modules/vue/dist/vue.js"></script>
 
 	</body>
 </html>
