--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,13 +9,17 @@
 
 	</head>
 	<body>
-
-		<div id="editor">
-			<textarea :value="input" @input="update"></textarea>
-		  	<div v-html="compiledMarkdown"></div>
+		
+		<div id="app">
+			<p>{{ message }}</p>
 		</div>
 
+	  	<!-- Dependencies -->
 		<script charset="utf-8" src="webapp/node_modules/vue/dist/vue.js"></script>
+
+		<!-- App -->
+
+		<script charset="utf-8" src="webapp/src/index.js"></script>
 
 	</body>
 </html>
