Configurado para poder instalar dependências da view

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
 		<title>Godinez</title>
  		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="webapp/resources/css/app.css" />
 		<link rel="shortcut icon" type="image/png" href="webapp/resources/img/favicon.png"/>
-
 	</head>
 	<body>
-		
 		<div id="app">
 			<p>{{ message }}</p>
 		</div>
-
 	  	<!-- Dependencies -->
-		<script charset="utf-8" src="webapp/node_modules/vue/dist/vue.js"></script>
+		<script charset="utf-8" src="webapp/lib/vue/dist/vue.js"></script>
 
 		<!-- App -->
-
 		<script charset="utf-8" src="webapp/src/index.js"></script>
 
 	</body>
