estruturando projeto web

--- a/web/index.html
+++ b/web/index.html
@@ -14,10 +14,10 @@
     </div>
 
     <!-- Dependencies -->
-    <script charset="utf-8" src="static/lib/vue/dist/vue.js"></script>
+    <script charset="utf-8" src="lib/vue/dist/vue.js"></script>
 
     <!-- App -->
-    <script charset="utf-8" src="static/dist/app.js"></script>
+    <script charset="utf-8" src="dist/app.js"></script>
 
 </body>
 </html>
