iniciando vue.js

--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <!-- Dependencies -->
-    <script charset="utf-8" src="lib/vue/dist/vue.js"></script>
+    <script charset="utf-8" src="dist/lib/vue/dist/vue.js"></script>
 
     <!-- App -->
     <script charset="utf-8" src="dist/app.js"></script>
