--- a/web/index.html
+++ b/web/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Godinez</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="static/resources/css/app.css"/>
-    <link rel="shortcut icon" type="image/png" href="static/resources/img/favicon.png"/>
+    <link rel="stylesheet" type="text/css" href="resources/css/app.css"/>
+    <link rel="shortcut icon" type="image/png" href="resources/img/favicon.png"/>
 </head>
 <body>
     
