--- a/web/index.html
+++ b/web/index.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Godinez</title>
+  <head>
+  	<title>Godinez</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="resources/css/app.css"/>
-    <link rel="shortcut icon" type="image/png" href="resources/img/favicon.png"/>
-</head>
-<body>
-    
-    <div id="container">
-        <router-view></router-view>
-        teste
-    </div>
-
-    <!-- Dependencies -->
-    <script charset="utf-8" src="dist/lib/vue/dist/vue.js"></script>
-
-    <!-- App -->
-    <script charset="utf-8" src="dist/app.js"></script>
-
-</body>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
